--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -2,8 +2,7 @@
  * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
+ 18bc9c*/
 body {
     overflow-x: hidden;
 }
@@ -48,7 +47,7 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+   /* content: "\f005";*/
     display: inline-block;
     position: relative;
     top: -.8em;
@@ -57,7 +56,7 @@ hr.star-primary:after {
     font-size: 2em;
 }
 
-hr.star-light {
+/*hr.star-light {
     border-color: #fff;
 }
 
@@ -67,13 +66,13 @@ hr.star-light:after {
 }
 
 hr.star-primary {
-    border-color: #2c3e50;
+    /*border-color: #2c3e50;*/
 }
 
 hr.star-primary:after {
     color: #2c3e50;
     background-color: #fff;
-}
+}*/
 
 .img-centered {
     margin: 0 auto;
@@ -82,7 +81,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: black;
 }
 
 header .container {
@@ -115,7 +114,7 @@ header .intro-text .skills {
     }
 
     header .intro-text .name {
-        font-size: 4.75em;
+        font-size: 3em;
     }
 
     header .intro-text .skills {
@@ -181,7 +180,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #18bc9c;
+    background: black;
 }
 
 section.success a,
